openshift/route.yml
apiVersion: v1
kind: Route
metadata:
  name: tetris-route
spec:
  to:
    kind: Service
    name: tetris-svc
